logs/cir-cuda/GRAMSCHM_gramschmidt.hip.cpp.cir.log
COMMAND: /workspace/llvm-bin/clang-23 -fclangir --gcc-install-dir=/usr/lib/gcc/x86_64-linux-gnu/11 -x hip --hip-path=/opt/rocm-6.3.0 --offload-arch=gfx942 -D__AMDGCN_WAVEFRONT_SIZE=64 -I/root/polybenchGpu/CUDA/GRAMSCHM -std=c++17 -O0 -c /root/polybenchGpu/HIP/GRAMSCHM/gramschmidt.hip.cpp -I/root/polybenchGpu/HIP -I/root/polybenchGpu/HIP/GRAMSCHM -o /tmp/GRAMSCHM_gramschmidt.hip.cpp.cir.o

/root/polybenchGpu/HIP/GRAMSCHM/gramschmidt.hip.cpp:118:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  118 |         hipGetDeviceProperties(&deviceProp, GPU_DEVICE);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/rocm-6.3.0/include/hip/hip_runtime_api.h:91:32: note: expanded from macro 'hipGetDeviceProperties'
   91 | #define hipGetDeviceProperties hipGetDevicePropertiesR0600
      |                                ^
/root/polybenchGpu/HIP/GRAMSCHM/gramschmidt.hip.cpp:120:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  120 |         hipSetDevice( GPU_DEVICE );     
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/GRAMSCHM/gramschmidt.hip.cpp:186:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  186 |         hipMalloc((void **)&A_gpu, sizeof(DATA_TYPE) * NI * NJ);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/GRAMSCHM/gramschmidt.hip.cpp:187:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  187 |         hipMalloc((void **)&R_gpu, sizeof(DATA_TYPE) * NJ * NJ);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/GRAMSCHM/gramschmidt.hip.cpp:188:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  188 |         hipMalloc((void **)&Q_gpu, sizeof(DATA_TYPE) * NI * NJ);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/GRAMSCHM/gramschmidt.hip.cpp:189:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  189 |         hipMemcpy(A_gpu, A, sizeof(DATA_TYPE) * NI * NJ, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/GRAMSCHM/gramschmidt.hip.cpp:197:3: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  197 |                 hipDeviceSynchronize();
      |                 ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/GRAMSCHM/gramschmidt.hip.cpp:199:3: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  199 |                 hipDeviceSynchronize();
      |                 ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/GRAMSCHM/gramschmidt.hip.cpp:201:3: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  201 |                 hipDeviceSynchronize();
      |                 ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/GRAMSCHM/gramschmidt.hip.cpp:207:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  207 |         hipMemcpy(A_outputFromGpu, A_gpu, sizeof(DATA_TYPE) * NI * NJ, hipMemcpyDeviceToHost);    
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/GRAMSCHM/gramschmidt.hip.cpp:209:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  209 |         hipFree(A_gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/GRAMSCHM/gramschmidt.hip.cpp:210:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  210 |         hipFree(R_gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/GRAMSCHM/gramschmidt.hip.cpp:211:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  211 |         hipFree(Q_gpu);
      |         ^~~~~~~~~~~~~~
loc("/opt/rocm-6.3.0/include/hip/amd_detail/hip_assert.h":70:3): error: 'cir.cast' op result type address space does not match the address space of the operand
fatal error: CIR module verification error before running CIR-to-CIR passes
clang-23: error: clang frontend command failed with exit code 70 (use -v to see invocation)
clang version 23.0.0git (git@github.com:llvm/llvm-project.git f30c3bb2647d4385c9d2035b9a661ecc0bcca813)
Target: x86_64-unknown-linux-gnu
Thread model: posix
InstalledDir: /workspace/llvm-bin
Build config: +assertions
clang-23: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang-23: note: diagnostic msg: /tmp/gramschmidt-gfx942-5ef5f9.hip
clang-23: note: diagnostic msg: /tmp/gramschmidt-25abb5.hip
clang-23: note: diagnostic msg: /tmp/gramschmidt-gfx942-5ef5f9.sh
clang-23: note: diagnostic msg: 

********************
